--- a/MyShopProject/MyShopProject.csproj
+++ b/MyShopProject/MyShopProject.csproj
@@ -332,6 +332,7 @@
     <Compile Include="Areas\MYSHOP\Controllers\OrderStatusController.cs" />
     <Compile Include="Areas\MYSHOP\Controllers\OrderSummaryController.cs" />
     <Compile Include="Areas\MYSHOP\Controllers\OutletMasterController.cs" />
+    <Compile Include="Areas\MYSHOP\Controllers\OutletRevisitDetailsController.cs" />
     <Compile Include="Areas\MYSHOP\Controllers\OutletRouteController.cs" />
     <Compile Include="Areas\MYSHOP\Controllers\OutletsController.cs" />
     <Compile Include="Areas\MYSHOP\Controllers\PaitentOrderRegisterController.cs" />
@@ -481,6 +482,7 @@
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\OrderStatusModel.cs" />
     <Compile Include="Models\OutletMasterReport.cs" />
+    <Compile Include="Models\OutletRevisitDetailsModel.cs" />
     <Compile Include="Models\PaginationExample.cs" />
     <Compile Include="Models\partyDetailsModel.cs" />
     <Compile Include="Models\PerformanceSummaryMonthWiseReportModel.cs" />
@@ -1991,6 +1993,8 @@
     <Content Include="Areas\MYSHOP\Views\SearchingInputs\_BranchPartial.cshtml" />
     <Content Include="Areas\MYSHOP\Views\DashboardMenu\DashboardBranchComboboxOrder.cshtml" />
     <Content Include="Areas\MYSHOP\Views\DashboardMenu\DashboardStateComboboxOrder.cshtml" />
+    <Content Include="Areas\MYSHOP\Views\OutletRevisitDetails\OutletRevisitDetails.cshtml" />
+    <Content Include="Areas\MYSHOP\Views\OutletRevisitDetails\_PartialGridOutletRevisitDetails.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
