--- a/ERP.UI/Web.config
+++ b/ERP.UI/Web.config
@@ -15,23 +15,23 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="crmConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa; Password=5dc57YITWh" providerName="System.Data.SqlClient"/>
-    <add name="crmConnectionDefault" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa; Password=5dc57YITWh;pooling='true';Max Pool Size=200"/>
-    <add name="crmReadOnlyConnection" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa; Password=5dc57YITWh;pooling='true';Max Pool Size=200"/>
+    <add name="crmConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa; Password=eCR78pxIz@we34" providerName="System.Data.SqlClient"/>
+    <add name="crmConnectionDefault" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa; Password=eCR78pxIz@we34;pooling='true';Max Pool Size=200"/>
+    <add name="crmReadOnlyConnection" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa; Password=eCR78pxIz@we34;pooling='true';Max Pool Size=200"/>
     <add name="PK11062018ConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;Persist Security Info=True;User ID=sa" providerName="System.Data.SqlClient"/>
-    <add name="PK11062018ConnectionString1" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;Persist Security Info=True;User ID=sa;Password=5dc57YITWh" providerName="System.Data.SqlClient"/>
-    <add name="PK17092018ConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa;Password=5dc57YITWh" providerName="System.Data.SqlClient"/>
-    <add name="PK17092018ConnectionString1" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa;Password=5dc57YITWh" providerName="System.Data.SqlClient"/>
-    <add name="ERP_ConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa;Password=5dc57YITWh" providerName="System.Data.SqlClient"/>
-    <add name="PK03092018ConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;Persist Security Info=True;User ID=sa;Password=5dc57YITWh" providerName="System.Data.SqlClient"/>
-    <add name="PK17092018ConnectionString2" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;Persist Security Info=True;User ID=sa;Password=5dc57YITWh" providerName="System.Data.SqlClient"/>
+    <add name="PK11062018ConnectionString1" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;Persist Security Info=True;User ID=sa;Password=eCR78pxIz@we34" providerName="System.Data.SqlClient"/>
+    <add name="PK17092018ConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa;Password=eCR78pxIz@we34" providerName="System.Data.SqlClient"/>
+    <add name="PK17092018ConnectionString1" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa;Password=eCR78pxIz@we34" providerName="System.Data.SqlClient"/>
+    <add name="ERP_ConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa;Password=eCR78pxIz@we34" providerName="System.Data.SqlClient"/>
+    <add name="PK03092018ConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;Persist Security Info=True;User ID=sa;Password=eCR78pxIz@we34" providerName="System.Data.SqlClient"/>
+    <add name="PK17092018ConnectionString2" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;Persist Security Info=True;User ID=sa;Password=eCR78pxIz@we34" providerName="System.Data.SqlClient"/>
     <add name="Excel03ConString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source={0};&#xA;&#xA;                         Extended Properties='Excel 8.0;HDR={1}'"/>
     <add name="Excel07ConString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source={0};&#xA;&#xA;                         Extended Properties='Excel 8.0;HDR={1}'"/>
     <add name="PeekayConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=Development;User ID=sa" providerName="System.Data.SqlClient"/>
-    <add name="KARUNALIVEConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa;Password=5dc57YITWh;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="KARUNALIVEConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa;Password=eCR78pxIz@we34;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient"/>
     <add name="SalesTrackerConnectionString" connectionString="Data Source=10.0.8.251\MSSQL2016;Initial Catalog=SalesTracker;User ID=sa;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient"/>
-    <add name="RollickTestingConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa;Password=5dc57YITWh;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient"/>
-    <add name="RollickTestingConnectionString1" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa;Password=5dc57YITWh" providerName="System.Data.SqlClient"/>
+    <add name="RollickTestingConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa;Password=eCR78pxIz@we34;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="RollickTestingConnectionString1" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa;Password=eCR78pxIz@we34" providerName="System.Data.SqlClient"/>
     
   </connectionStrings>
   <appSettings>
@@ -73,15 +73,15 @@
     <add key="fileSizeinMB" value="15"/>
     <add key="DeleteErrorMessage" value="Used in other module. Can not Delete"/>
     <add key="DBName" value="PK11062018"/>
-    <add key="DBConnectionDefault" value="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa; Password=5dc57YITWh;pooling='true';Max Pool Size=200"/>
-    <add key="DBReadOnlyConnection" value="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog= FSM_ITC;User ID=sa; Password=5dc57YITWh;pooling='true';Max Pool Size=200"/>
-    <add key="connsql" value="server=3.7.30.86,1480\SQLEXPRES;database=FSM_ITC;Trusted_Connection=false;uid=sa;pwd=5dc57YITWh"/>
+    <add key="DBConnectionDefault" value="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa; Password=eCR78pxIz@we34;pooling='true';Max Pool Size=200"/>
+    <add key="DBReadOnlyConnection" value="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog= FSM_ITC;User ID=sa; Password=eCR78pxIz@we34;pooling='true';Max Pool Size=200"/>
+    <add key="connsql" value="server=3.7.30.86,1480\SQLEXPRES;database=FSM_ITC;Trusted_Connection=false;uid=sa;pwd=eCR78pxIz@we34"/>
     <!--<add key="DBConnectionDefault" value="Data Source=AVIJITTFS4\SQLSERVER2008R2;Initial Catalog=GE28082017;User ID=sa; Password=sap@123;pooling='true';Max Pool Size=200" />
     <add key="DBReadOnlyConnection" value="Data Source=AVIJITTFS4\SQLSERVER2008R2;Initial Catalog=ERPErpGE12092017-L;User ID=sa; Password=sap@123;pooling='true';Max Pool Size=200" />
      <add key="connsql" value="server=AVIJITTFS4\SQLSERVER2008R2;database=ERPErpGE12092017-L;Trusted_Connection=false;uid=sa;pwd=sap@123" MSSQLSERVERR2/>-->
-    <!--<add key="DBConnectionDefault" value="Data Source=10.0.8.251\mssql2016;Initial Catalog=ERPDev;User ID=sa; Password=5dc57YITWh;pooling='true';Max Pool Size=200" />
-    <add key="DBReadOnlyConnection" value="Data Source=10.0.8.251\mssql2016;Initial Catalog=ERPDev;User ID=sa; Password=5dc57YITWh;pooling='true';Max Pool Size=200" />
-    <add key="connsql" value="server=10.0.8.251\mssql2016;database=ERPDev;Trusted_Connection=false;uid=sa;pwd=5dc57YITWh" />-->
+    <!--<add key="DBConnectionDefault" value="Data Source=10.0.8.251\mssql2016;Initial Catalog=ERPDev;User ID=sa; Password=eCR78pxIz@we34;pooling='true';Max Pool Size=200" />
+    <add key="DBReadOnlyConnection" value="Data Source=10.0.8.251\mssql2016;Initial Catalog=ERPDev;User ID=sa; Password=eCR78pxIz@we34;pooling='true';Max Pool Size=200" />
+    <add key="connsql" value="server=10.0.8.251\mssql2016;database=ERPDev;Trusted_Connection=false;uid=sa;pwd=eCR78pxIz@we34" />-->
     <add key="AuthToken" value="600372CE-1F92-4B4B-99EA-A2E5C78CA9B1"/>
     <add key="BackupPath" value="C:\ERPDataBaseBackUp\"/>
     <add key="ReportPOpdf" value="D:\ERP2\Reports\Reports\RepxReportDesign\PurchaseOrder\DocDesign\PDFFiles\"/>
@@ -94,7 +94,7 @@
     <!--Product Image Url-->
     <add key="ProductImageURL" value="http://localhost:7666/CommonFolder/ProductImages/"/>
 	<!--Rev Pallab/Sanchita-->
-	<add key="ErpConnectionMaster" value="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=master;User ID=sa; Password=5dc57YITWh;pooling='true';Max Pool Size=200"/>
+	<add key="ErpConnectionMaster" value="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=master;User ID=sa; Password=eCR78pxIz@we34;pooling='true';Max Pool Size=200"/>
 	<!--End of Rev Pallab/Sanchita-->
   </appSettings>
   <!--
