--- a/MyShopProject/bin/MyShop.dll.config
+++ b/MyShopProject/bin/MyShop.dll.config
@@ -17,29 +17,33 @@
   <connectionStrings>
     <add name="SalesTrackerEntities" connectionString="metadata=res://*/FTSsalesmanTrackEntity.csdl|res://*/FTSsalesmanTrackEntity.ssdl|res://*/FTSsalesmanTrackEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HRMS\SQLSERVER2016;initial catalog=BreezeSHOPDBV6180118;user id=sa;password=yBDTpPYG;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="crmConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa; Password=5dc57YITWh"
+    <add name="crmConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa; Password=eCR78pxIz@we34"
       providerName="System.Data.SqlClient" />
-    <add name="crmConnectionDefault" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa; Password=5dc57YITWh;pooling='true';Max Pool Size=200" />
-    <add name="crmReadOnlyConnection" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa; Password=5dc57YITWh;pooling='true';Max Pool Size=200" />
-    <add name="10.0.8.251\MSSQLSERVERR2_ERPDev_Connection" connectionString="XpoProvider=MSSqlServer;data source=3.7.30.86,1480\SQLEXPRESS;user id=sa;password=5dc57YITWh;initial catalog=FSM_ITC;Persist Security Info=true" />
-    <add name="ERP_ConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa;Password=5dc57YITWh;" />
-    <add name="FSM_ITCConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa;Password=5dc57YITWh"
+    <add name="crmConnectionDefault" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa; Password=eCR78pxIz@we34;pooling='true';Max Pool Size=200" />
+    <add name="crmReadOnlyConnection" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa; Password=eCR78pxIz@we34;pooling='true';Max Pool Size=200" />
+    <add name="10.0.8.251\MSSQLSERVERR2_ERPDev_Connection" connectionString="XpoProvider=MSSqlServer;data source=3.7.30.86,1480\SQLEXPRESS;user id=sa;password=eCR78pxIz@we34;initial catalog=FSM_ITC;Persist Security Info=true" />
+    <add name="ERP_ConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa;Password=eCR78pxIz@we34;" />
+    <add name="FSM_ITCConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa;Password=eCR78pxIz@we34"
       providerName="System.Data.SqlClient" />
     <add name="FSM_ITCConnectionString1" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa"
       providerName="System.Data.SqlClient" />
-    <add name="FSM_ITCConnectionString2" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa;Password=5dc57YITWh"
+    <add name="FSM_ITCConnectionString2" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa;Password=eCR78pxIz@we34"
       providerName="System.Data.SqlClient" />
     <add name="ITCLIVEConnectionString" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=ITCLIVE;User ID=sa"
       providerName="System.Data.SqlClient" />
-    <add name="FSM_ITCConnectionString3" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;Persist Security Info=True;User ID=sa;Password=5dc57YITWh"
+    <add name="FSM_ITCConnectionString3" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;Persist Security Info=True;User ID=sa;Password=eCR78pxIz@we34"
       providerName="System.Data.SqlClient" />
-    <add name="FSM_ITCConnectionString4" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa;Password=5dc57YITWh"
+    <add name="FSM_ITCConnectionString4" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa;Password=eCR78pxIz@we34"
       providerName="System.Data.SqlClient" />
-    <add name="FSM_ITCConnectionString5" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa;Password=5dc57YITWh"
+    <add name="FSM_ITCConnectionString5" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa;Password=eCR78pxIz@we34"
       providerName="System.Data.SqlClient" />
-    <add name="FSM_ITCConnectionString6" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;Persist Security Info=True;User ID=sa;Password=5dc57YITWh"
+    <add name="FSM_ITCConnectionString6" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;Persist Security Info=True;User ID=sa;Password=eCR78pxIz@we34"
       providerName="System.Data.SqlClient" />
-    <add name="FSM_ITCConnectionString7" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa;Password=5dc57YITWh"
+    <add name="FSM_ITCConnectionString7" connectionString="Data Source=3.7.30.86,1480\SQLEXPRES;Initial Catalog=FSM_ITC;User ID=sa;Password=eCR78pxIz@we34"
+      providerName="System.Data.SqlClient" />
+    <add name="FSM_ITCConnectionString8" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;Persist Security Info=True;User ID=sa;Password=eCR78pxIz@we34"
+      providerName="System.Data.SqlClient" />
+    <add name="FSM_ITCConnectionString9" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa;Password=eCR78pxIz@we34;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -49,8 +53,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="SiteURL" value="http://localhost:5735/" />
-    <!--<add key="DBReadOnlyConnection" value="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog= breeze_development;User ID=sa; Password=5dc57YITWh;pooling='true';Max Pool Size=200" />-->
-    <add key="DBConnectionDefault" value="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa; Password=5dc57YITWh;pooling='true';Max Pool Size=200" />
+    <!--<add key="DBReadOnlyConnection" value="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog= breeze_development;User ID=sa; Password=eCR78pxIz@we34;pooling='true';Max Pool Size=200" />-->
+    <add key="DBConnectionDefault" value="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa; Password=eCR78pxIz@we34;pooling='true';Max Pool Size=200" />
     <add key="LogOutURL" value="http://3.7.30.86:82/ERP/OMS/SignOff.aspx" />
     <add key="owin:AutomaticAppStartup" value="false" />
     <add key="Path" value="http://3.7.30.86:82//Commonfolder/" />
