--- a/MyShopProject/Web.config
+++ b/MyShopProject/Web.config
@@ -43,6 +43,8 @@
       providerName="System.Data.SqlClient" />
     <add name="FSM_ITCConnectionString8" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;Persist Security Info=True;User ID=sa;Password=eCR78pxIz@we34"
       providerName="System.Data.SqlClient" />
+    <add name="FSM_ITCConnectionString9" connectionString="Data Source=3.7.30.86,1480\SQLEXPRESS;Initial Catalog=FSM_ITC;User ID=sa;Password=eCR78pxIz@we34;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
